resources/argocd-ingress-crystalbasilica.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-cb-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: le-clusterissuer
spec:
  rules:
  - host: argocd.crystalbasilica.co.uk
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: http
  tls:
    - hosts:
      - argocd.crystalbasilica.co.uk
      secretName: argocd-cert-manager-ctls
