resources/argocd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: argocd.iamalexsjones.com
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: http
  tls:
    - hosts:
      - argocd.iamalexsjones.com
      secretName: argocd-tls
      # sudo certbot certonly --preferred-challenges dns --manual -d argocd.iamalexsjones.com
      # kubectl create secret tls argo-tls --key privkey.pem --cert cert.pem -n argocd
