resources/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: grafana.iamalexsjones.com
    http:
      paths:
      - backend:
          serviceName: prometheus-grafana
          servicePort: 3000
  tls:
    - hosts:
      - grafana.iamalexsjones.com
      secretName: grafana-tls
      # sudo certbot certonly --preferred-challenges dns --manual -d grafana.iamalexsjones.com
      # kubectl create secret tls grafana-tls --key privkey.pem --cert cert.pem -n monitoring
